# DIPPER

./: .gitignore  CMakeLists.txt  README.md
cpu/: mash.cu  mash_placement.cuh  matrix_reader.cu  placement_close_k.cu
docker/: Dockerfile
docs/: index.md
install/: installUbuntu.sh
scripts/: reproduce_results.sh
src/: MSA.cu  fourBitCompressor.cpp  fourBitCompressor.hpp  mash.cu  mash_placement.cuh  placement_close_k.cu  placement_close_k.cuh  placement_close_k_bme.cu  placement_close_k_rmse.cu  tree_generation.cu  tree_generation_dc.cu  version.hpp.in
src/divide_and_conquer/: msa.cu  placement_close_k.cu
src/hip/: MSA.cu.hip  MSA_hip.cpp  mash.cu.hip  mash_hip.cpp  mash_placement.cuh.hip  mash_placement_hip.hpp  matrix_reader.cu.hip  matrix_reader_hip.cpp  neighborJoining.cu.hip  neighborJoining_hip.cpp  placement.cu.hip  placement_close_k.cu.hip  placement_close_k_hip.cpp  placement_hip.cpp  tree_generation.cu.hip  tree_generation_hip.cpp
src/hip/divide_and_conquer/: mash.cu.hip  mash_hip.cpp  msa.cu.hip  msa_hip.cpp  placement_close_k.cu.hip  placement_close_k_hip.cpp
